# ZS-ToD

./: .gitignore  README.md  data_prep.sh  pyproject.toml  trainer.sh
zs_tod/config/data_prep/: zs_tod.yaml
zs_tod/configs/trainer/: trainer_base.yaml  zs_tod_trainer.yaml
zs_tod/src/: inference.py  my_enums.py  trainer.py  utils.py  zs_tod_dstc_data_prep.py
zs_tod/src/configs/: dataprep_config.py  dm_config.py  inference_config.py  trainer_config.py
zs_tod/src/datamodules/: base_datamodule.py  tod_datamodules.py
zs_tod/src/dstc/: dstc_domains.py
zs_tod/src/generation/: generation_base.py  generation_handler_factory.py  simple_generation.py
zs_tod/src/metrics/: dstc_metrics.py  goal_metric.py  intent_accuracy_metric.py  requested_slots_metric.py  response_metrics.py  tod_metrics_base.py
zs_tod/src/tod/: tod_dataclasses.py  zs_target.py  zs_tod_action.py  zs_tod_belief.py  zs_tod_context.py  zs_tod_dst.py
zs_tod/src/tod/turns/: general_turn_csv_row.py  turn_csv_row.py  zs_tod_turn.py
