[tool.poetry]
name = "zs-tod"
version = "0.1.0"
description = ""
authors = ["Adib Mosharrof <adib.mosharrof@gmail.com>"]
readme = "README.md"
packages = [{include = "zs_tod"}]

[tool.poetry.dependencies]
python = "^3.9.7"
black = "^23.3.0"
pathos = "^0.3.0"
pyhumps = "^3.8.0"
hydra-core = "^1.3.2"
matplotlib = "^3.7.1"
fuzzywuzzy = "^0.18.0"
evaluate = "^0.4.0"
dotmap = "^1.3.30"
dataclasses-json = "^0.5.7"
dataclass-csv = "^1.4.0"
transformers = "^4.27.4"
wandb = "^0.14.0"
seaborn = "^0.12.2"
numerize = "^0.12"
torchmetrics = "^0.11.4"
absl-py = "^1.4.0"
rouge-score = "^0.1.2"
sgd-dstc8-data-model = "^0.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
